# box

./: .gitignore  CMakeCache.txt  CMakeLists.txt  GlobalData.cpp  GlobalData.h  Text.txt  _maps.cpp  _maps.h  a.out  adapt.cpp  adapt.h  base.h  bash.exe.stackdump  bfs.cpp  bfs.h  block.cpp  block.h  box  box.cpp  box.h  conf.ini  content.cpp  content.h  data.sav  edithand.cpp  edithand.h  help  log.txt  main.cpp  main.cpp.bk  main.cpp.console  mainhand.cpp  mainhand.h  map.txt  menu_event.cpp  menu_event.h  person.cpp  person.h  readme.md  rects.txt  (+4 more)
Box/: CMakeLists.txt  block.h  box.cpp  box.h  content.cpp  content.h  person.cpp  person.h
SDLC/: CMakelists.txt  SDLC_Com_Radius.cpp  SDLC_Com_Radius.h  SDLC_Component.cpp  SDLC_Component.h  SDLC_Context.cpp  SDLC_Context.h  SDLC_Event.h  SDLC_Tooltip.cpp  SDLC_Tooltip.h  SDLC_log.h  sdltool.h
SDLC/Extends/: Animation.cpp  AnimationTest.h  Image.cpp  Image.h  SDLC_Button.cpp  SDLC_Button.h  SDLC_Example.cpp  SDLC_Example.h  SDLC_Label.cpp  SDLC_Label.h  SDLC_Msgbox.cpp  SDLC_Msgbox.h  helpbar.cpp  helpbar.h  toolbar.cpp  toolbar.h
SDLC/Extends/game/: SDLC_Session.cpp  SDLC_Session.h  SDLC_Tooltip.cpp  SDLC_Tooltip.h
SDLdraw/: CMakeLists.txt  drawlist.cpp  drawlist.h  palette.cpp  palette.h  sdltool.cpp
Test/: CMakeLists.txt  palettetest  palettetest.cpp  pngtest.cpp  testSDLC.cpp  testbfs.cpp  testbfs2.cpp
consoledraw/: consolelist.h
fini/: CMakeLists.txt  fini.c  fini.h
readme_img/tool/: src.txt  tar.txt  tranf.cpp
src/: CMakeLists.txt  _maps.cpp  _maps.h  base.h  block.cpp  block.h  box.cpp  box.h  content.cpp  content.h  person.cpp  person.h
tool/: tar.txt
